buildscript {
    repositories {
        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
        mavenCentral()
    }
    dependencies {
        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
    }
}

plugins {
    id 'eclipse'
    id 'idea'
    id 'net.minecraftforge.gradle' version '[6.0.16,6.2)'
}

apply plugin: 'org.spongepowered.mixin'

group = mod_group_id
version = mod_version

base {
    archivesName = mod_id
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(17)
}

minecraft {
    mappings channel: mapping_channel, version: mapping_version
    copyIdeResources = true
    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        configureEach {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            args "-mixin.config=${mod_id}.mixins.json"

            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        client {
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        server {
            property 'forge.enabledGameTestNamespaces', mod_id
            args '--nogui'
        }

        gameTestServer {
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        data {
            workingDirectory project.file('run-data')
            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
        }
    }
}

mixin {
    add sourceSets.main, "${mod_id}.refmap.json"
    config "${mod_id}.mixins.json"
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url = 'https://modmaven.dev/'
        content {
            includeGroup 'appeng'
            includeGroup 'org.appliedenergistics'
            includeGroup 'mekanism'
            includeGroup 'dev.technici4n'
        }
    }
    maven {
        url = 'https://maven.blamejared.com/'
    }
    maven {
        url = 'https://www.cursemaven.com'
        content {
            includeGroup 'curse.maven'
        }
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"

    implementation fg.deobf("appeng:appliedenergistics2-forge:${ae2_version}")

    compileOnly fg.deobf("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}")
    compileOnly fg.deobf("mezz.jei:jei-${minecraft_version}-forge-api:${jei_version}")
    runtimeOnly fg.deobf("mezz.jei:jei-${minecraft_version}-forge:${jei_version}")

    compileOnly fg.deobf("curse.maven:jade-324717:${jade_file_id}")
    runtimeOnly fg.deobf("curse.maven:jade-324717:${jade_file_id}")

    compileOnly fg.deobf("curse.maven:applied-flux-965012:${appflux_file_id}")
    runtimeOnly fg.deobf("curse.maven:applied-flux-965012:${appflux_file_id}")
    runtimeOnly fg.deobf("org.appliedenergistics:guideme:${guideme_version}")
    runtimeOnly fg.deobf("curse.maven:glodium-957920:${glodium_file_id}")

    compileOnly fg.deobf("curse.maven:extendedae-892005:${extendedae_file_id}")
    runtimeOnly fg.deobf("curse.maven:extendedae-892005:${extendedae_file_id}")

    compileOnly fg.deobf("curse.maven:flux-networks-248020:${flux_networks_file_id}")
    runtimeOnly fg.deobf("curse.maven:flux-networks-248020:${flux_networks_file_id}")

    compileOnly fg.deobf("mekanism:Mekanism:${mekanism_version}:all")
    runtimeOnly fg.deobf("mekanism:Mekanism:${mekanism_version}:all")

    // Thunderbolt Core — AE2 infrastructure layer (fast crafting planner, channel/batch algorithms).
    // Provided at runtime as a separate mod jar in the modpack.
    compileOnly "com.moakiee.thunderbolt:thunderbolt:${thunderbolt_version}"
    runtimeOnly "com.moakiee.thunderbolt:thunderbolt:${thunderbolt_version}"

    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:${mixinextras_version}"))
    implementation fg.deobf("io.github.llamalad7:mixinextras-forge:${mixinextras_version}")
    jarJar(group: 'io.github.llamalad7', name: 'mixinextras-forge', version: "[${mixinextras_version},)") {
        jarJar.pin(it, "${mixinextras_version}")
    }
}

tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [
            minecraft_version: minecraft_version,
            minecraft_version_range: minecraft_version_range,
            forge_version: forge_version,
            forge_version_range: forge_version_range,
            loader_version_range: loader_version_range,
            mod_id: mod_id,
            mod_name: mod_name,
            mod_license: mod_license,
            mod_version: mod_version,
            mod_authors: mod_authors,
            mod_description: mod_description,
    ]

    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

tasks.named('jar', Jar).configure {
    manifest {
        attributes([
                'Specification-Title'     : mod_id,
                'Specification-Vendor'    : mod_authors,
                'Specification-Version'   : '1',
                'Implementation-Title'    : project.name,
                'Implementation-Version'  : project.jar.archiveVersion,
                'Implementation-Vendor'   : mod_authors,
                'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                'TweakClass'              : 'org.spongepowered.asm.launch.MixinTweaker',
                'TweakOrder'              : 0,
                'MixinConfigs'            : "${mod_id}.mixins.json"
        ])
    }

    finalizedBy 'reobfJar'
}

tasks.named('jarJar', Jar).configure {
    archiveClassifier = ''
    finalizedBy 'reobfJar'
}

afterEvaluate {
    tasks.findByName('reobfJarJar')?.configure {
        mustRunAfter 'jar'
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-Xmaxerrs' << '5000'
}
